--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultDbConnection": "Server=DESKTOP-H7SOR8T;Database=Chrisquayz;TrustServerCertificate=True;Trusted_Connection=True"
+    //"StorageAccount": "Server=DESKTOP-H7SOR8T;Database=Chrisquayz;TrustServerCertificate=True;Trusted_Connection=True"
+    //This implementation is for if you have your images stored in an external storage platform ,like microsoft azure,this line of code above will be the connection string
+  },
+  "ApiSettings": {
+    "Secret": "QWERTYUIOP"
+  }
 }
